# calendar

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pymarkdown.yaml  AGENTS.md  LICENSE  README.md  app.py  coverage.py  devbox.json  generate_calendar.html  generate_calendar.py  holiday_cache.pkl  holidays.json  mypy.ini  package-lock.json  package.json  pyproject.toml  test_generate_calendar.py  us_holidays.ics  us_holidays_2025.ics  us_holidays_2025_to_2026.ics  us_holidays_2026.ics  us_holidays_2026_to_2027.ics  wrangler.toml
.github/workflows/: deploy-worker.yml  pull-request.yml  update-calendar.yml
cloudflare/: package.json  wrangler.toml
cloudflare/scripts/: build_static_calendar.py  check-parity.mjs  smoke-fetch.mjs
cloudflare/src/: calendar.js  index.js  runtime.js
config/: config.json
src/: generate_calendar.py  holidays.json
src/generate_calendar/: __init__.py  holidays.yaml
tests/: test_generate_calendar.py
