[tool.poetry]
name = "us-holidays-calendars"
version = "0.1.0"
description = "Generate a custom US holidays iCal file"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.13"
icalendar = "^4.0"
click = "^8.1"
json = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^4.0"
black = "^22.0"
mypy = "^0.990"
coverage = "^6.0"

[tool.poetry.scripts]
generate_calendar = "src.generate_calendar:main"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.backends.poetry_backend"