[tool.poetry]
name = "calendar"
version = "0.1.0"
description = "Generate a custom US holidays iCal file"
authors = ["Your Name <your@email.com>"]
packages = [{include = "generate_calendar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
icalendar = "^6.0"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^7.0"
black = "^25.0"
mypy = "^1.15"
coverage = "^7.0"

[tool.poetry.scripts]
generate_calendar = "generate_calendar:main"
test = "bash -c 'PYTHONPATH=src python -m unittest tests.test_generate_calendar'"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.backends.poetry_backend"