[tool.poetry]
name = "calendar"
version = "0.1.0"
description = "Generate a custom US holidays iCal file"
authors = ["Your Name <your@email.com>"]
packages = [{include = "generate_calendar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
icalendar = "^6.1.3"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"
coverage = "^7.8.0"
types-icalendar = "^6.1.3.20250329"
pre-commit = "^4.2.0"
pymarkdownlnt = "^0.9.29"
pdoc = "^15.0.1"

[tool.poetry.scripts]
generate_calendar = "generate_calendar:cli"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
